cluster/homelab/apps/default-namespace/basic-apache/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: default
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:2.4.62
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
          requests:
            cpu: "0.2"
