cluster/homelab/apps/default-namespace/basic-apache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 10.28.10.11
  selector:
    app: httpd
  ports:
  - name: http
    targetPort: 80
    port: 80
