cluster/homelab/apps/default-namespace/basic-apache/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: httpd
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.apache.local.opryga.com`)
      kind: Rule
      services:
        - name: httpd
          port: 80
    - match: Host(`apache.local.opryga.com`)
      kind: Rule
      services:
        - name: httpd
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: local-ip-list
          namespace: traefik
  tls:
    secretName: local-opryga-com-tls
